searchform reloaded - and nicely colored

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -2,7 +2,6 @@
 <html lang="de" data-ng-app="fettyBossy">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!--<link rel="stylesheet" href="css/material.css">-->
 
@@ -23,6 +22,21 @@
         .outer-wrapper{
             background-image: url('pictures/pfanni-bg.jpg');
         }
+        .container{
+            width: 85%;
+        }
+        .foodcategory ul{
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+        .foodcategory li{
+            display: inline;
+            padding-right: 1.5rem;
+        }
+        #recipeSearchInput{
+            width: 70%;
+        }
+
     </style>
 </head>
 <body>
