recipe detail view

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -21,6 +21,7 @@
     <style>
         .outer-wrapper{
             background-image: url('pictures/pfanni-bg.jpg');
+            min-height: 800px;
         }
         .container{
             width: 85%;
