--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,6 +1,6 @@
   <nav>
       <div class="nav-wrapper orange darken-2">
-          <a href="/" class="brand-logo">Fette Boss y0.22</a>
+          <a href="/" class="brand-logo">Fetty BossY <small>v0.14</small></a>
           <ul id="nav-mobile" class="right hide-on-small-only" ng-controller="SessionController as sessionCtrl">
             <li>
                 <a href="#/searchRecipe">Suche</a>
