file updload, problems with large entities not yet solved

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -46,6 +46,7 @@
 <script type="text/javascript" src="js/controllers/ViewUserController.js"></script>
 
 <script type="text/javascript" src="js/directives/AddeditRecipeRatingDirective.js"></script>
+<script type="text/javascript" src="js/directives/FileUploadDirective.js"></script>
 <script type="text/javascript" src="js/directives/ListRecipeRatingsDirective.js"></script>
 <script type="text/javascript" src="js/directives/LoginFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/MenuDirective.js"></script>
