recipe detail view / rating modul

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/fb-styles.css"/>
     <title>Fetty Bossy-DB version 0.12</title>
-    <style>
+   <!-- <style>
         .outer-wrapper{
             background-image: url('pictures/pfanni-bg.jpg');
             min-height: 800px;
@@ -38,7 +38,7 @@
             width: 70%;
         }
 
-    </style>
+    </style>-->
 </head>
 <body>
 <div class="outer-wrapper mdl-layout">
