recipe add & edit material design

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -18,27 +18,13 @@
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/fb-styles.css"/>
     <title>Fetty Bossy-DB version 0.12</title>
-   <!-- <style>
+   <style>
         .outer-wrapper{
             background-image: url('pictures/pfanni-bg.jpg');
             min-height: 800px;
         }
-        .container{
-            width: 85%;
-        }
-        .foodcategory ul{
-            padding-left: 1rem;
-            padding-right: 1rem;
-        }
-        .foodcategory li{
-            display: inline;
-            padding-right: 1.5rem;
-        }
-        #recipeSearchInput{
-            width: 70%;
-        }
+    </style>
 
-    </style>-->
 </head>
 <body>
 <div class="outer-wrapper mdl-layout">
