--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -6,7 +6,7 @@
     <!--<link rel="stylesheet" href="css/material.css">-->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>-->
 
     <!--libs-->
     <script type="text/javascript" src="js/lib/angular.js"></script>
