Swiper for ViewRecipe tpl  view and markup changes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -15,15 +15,19 @@
     <!--<script type="text/javascript" src="js/lib/material.js"></script>-->
 
     <!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.0/angular-material.min.css">-->
-    <link rel="stylesheet" href="css/materialize.css">
-    <link rel="stylesheet" href="css/fb-styles.css"/>
-    <title>Fetty Bossy-DB version 0.12</title>
+    <link rel="stylesheet" href="css/swiper.css" />
+    <link rel="stylesheet" href="css/materialize.css" />
+    <link rel="stylesheet" href="css/fb-styles.css" />
+    <title>Fetty Bossy-DB version 0.15</title>
   <!-- <style>
         .outer-wrapper{
             background-image: url('pictures/pfanni-bg.jpg');
             min-height: 800px;
         }
     </style>-->
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/lib/materialize.js"></script>
 </head>
 <body>
 <div class="outer-wrapper">
@@ -39,6 +43,30 @@
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/lib/materialize.js"></script>
+<script type="text/javascript" src="js/lib/swiper.min.js"></script>
+<!--Temporary here ->exclude this in seperate file-->
+<script>
+    var mySwiper = new Swiper ('.swiper-container', {
+        // Optional parameters
+        direction: 'horizontal',
+        loop: true,
+
+
+        // Navigation arrows
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev'
+
+        // And if we need scrollbar
+        //        scrollbar: '.swiper-scrollbar',
+    });
+
+    $(document).ready(function(){
+        var mySwiper = new Swiper ('swiper-container', {
+            direction: 'horizontal',
+            loop: true
+        })
+    });
+</script>
 
 <!--own code - interface not imported because of no need in javascript -->
 <script type="text/javascript" src="js/app-module.js"></script>
