utf-8 mit umlaute

--- a/Server/public/js/directives/registerForm.tpl.html
+++ b/Server/public/js/directives/registerForm.tpl.html
@@ -19,7 +19,7 @@
             <label for="registerEmail">E-Mail</label>
             <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
                 <span ng-show="registerForm.registerEmail.$error.required">Bitte gib Deine E-mail adresse an.</span>
-                <span ng-show="registerForm.registerEmail.$error.email">Das ist <i>keine</i> gültige E-mail adresse!</span>
+                <span ng-show="registerForm.registerEmail.$error.email">Das ist <i>keine</i> gÃ¼ltige E-mail adresse!</span>
             </div>
         </div>
 
