--- a/Server/public/js/directives/userDetails.tpl.html
+++ b/Server/public/js/directives/userDetails.tpl.html
@@ -2,11 +2,10 @@
     <div class="row">
         <div class="col s4">
             <h3>Mein Account</h3>
-            <p>hier könnten Bewertungen zu den Rezepten stehen</p>
+            <p>hier kÃ¶nnten Bewertungen zu den Rezepten stehen</p>
         </div>
         <div class="col s8">
             <h3>User Details</h3>
-
             <table>
                 <tr>
                     <td>User-ID:</td>
@@ -19,7 +18,7 @@
                         <input type="text"  value="{{user.name}}" />
                     </td>
                     <td>
-                        <button class="btn" >Name ändern</button>
+                        <button class="btn" >Name Ã¤ndern</button>
                     </td>
                 </tr>
                 <tr>
@@ -28,7 +27,7 @@
                         <input  type="email" class="validate" value="{{user.email}}">
                     </td>
                     <td>
-                        <button class="btn" >Adresse ändern</button>
+                        <button class="btn" >Adresse Ã¤ndern</button>
                     </td>
                 </tr>
                 <tr>
@@ -37,7 +36,7 @@
                         <input type="password" class="validate" value="{{user.password}}" />
                     </td>
                     <td>
-                        <button class="btn">Passwort ändern</button>
+                        <button class="btn">Passwort Ã¤ndern</button>
                     </td>
                 </tr>
             </table>
