--- a/Server/public/js/directives/searchResultlist.tpl.html
+++ b/Server/public/js/directives/searchResultlist.tpl.html
@@ -15,7 +15,7 @@
         <tbody>
             <tr ng-repeat="recipe in recipes | SearchRecipeFilter: recipeFilter">
                 <td >
-                    <img src="/pictures/food_1_q.jpg" style="max-width: 60px; height: auto" />
+                    <img ng-src="{{recipe.images[0].src}}" class="recipe-img"/>
                 </td>
                 <td >
                     <h6>
