--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -23,6 +23,7 @@
 <body>
 <div class="outer-wrapper">
     <fb-menu></fb-menu>
+    <fb-feedback-message></fb-feedback-message>
     <div class="ribbon"></div>
     <main class="supercontainer">
         <div data-ng-view style="border: 1px dashed darkred;">
@@ -45,6 +46,7 @@
 <script type="text/javascript" src="js/controllers/ViewUserController.js"></script>
 
 <script type="text/javascript" src="js/directives/AddeditRecipeRatingDirective.js"></script>
+<script type="text/javascript" src="js/directives/FeedbackMessageDirective.js"></script>
 <script type="text/javascript" src="js/directives/FileChooserDirective.js"></script>
 <script type="text/javascript" src="js/directives/InitSwiper.js"></script>
 <script type="text/javascript" src="js/directives/ListRecipeRatingsDirective.js"></script>
@@ -58,6 +60,7 @@
 <script type="text/javascript" src="js/filters/MinutesToHoursMinutesFilter.js"></script>
 <script type="text/javascript" src="js/filters/SearchRecipeFilter.js"></script>
 
+<script type="text/javascript" src="js/services/MessageService.js"></script>
 <script type="text/javascript" src="js/services/RepositoryService.js"></script>
 <script type="text/javascript" src="js/services/SessionService.js"></script>
 
