--- a/Server/public/js/directives/feedbackMessage.tpl.html
+++ b/Server/public/js/directives/feedbackMessage.tpl.html
@@ -1,4 +1,3 @@
-<div>
-    Message:{{messageService.getMessage().text}}
-
+<div ng-class="getMessageClass(messageService.getMessage().severity)">
+    {{messageService.getMessage().text}}
 </div>
