listener for updating message in directive after a new one is set

--- a/Server/public/js/directives/feedbackMessage.tpl.html
+++ b/Server/public/js/directives/feedbackMessage.tpl.html
@@ -1,4 +1,4 @@
-<div ng-class="getMessageClass(messageService.getMessage().severity)"
-     ng-show="messageService.getMessage()">
-    {{messageService.getMessage().text}}
+<div ng-class="getMessageClass(message.severity)"
+     ng-show="message">
+    {{message.text}}
 </div>
