testing some issues, fixing some

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -23,10 +23,10 @@
 <body>
 <div class="outer-wrapper">
     <fb-menu></fb-menu>
-    <fb-feedback-message></fb-feedback-message>
+    <fb-feedbackmessage></fb-feedbackmessage>
     <div class="ribbon"></div>
     <main class="supercontainer">
-        <div data-ng-view style="border: 1px dashed darkred;">
+        <div data-ng-view style="border: 0px dashed darkred;">
             <!-- will be filled by angular routing/templating -->
         </div>
     </main>
