--- a/Server/public/js/directives/feedbackMessage.tpl.html
+++ b/Server/public/js/directives/feedbackMessage.tpl.html
@@ -1,4 +1,5 @@
 <div ng-class="getMessageClass(message.severity)"
-     ng-show="message">
-    {{message.text}}
+     ng-show="message" class="feedback-window">
+    <h4>Fiidback Message is:</h4>
+    <p>{{message.text}}</p>
 </div>
