--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -23,7 +23,7 @@
 <body>
 <div class="outer-wrapper">
     <fb-menu></fb-menu>
-    <fb-feedbackmessage></fb-feedbackmessage>
+    <fb-feedback-message></fb-feedback-message>
     <div class="ribbon"></div>
     <main class="supercontainer">
         <div data-ng-view style="border: 0px dashed darkred;">
