Test-Link for messages

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -30,6 +30,14 @@
             <!-- will be filled by angular routing/templating -->
         </div>
     </main>
+
+    <!--Temporary for Message test START-->
+    Nur für Test der Meldungen:
+    <a href="#" onclick='window.setMessage("ERROR TEST", 2)'>ERROR</a>
+    <a href="#" onclick='window.setMessage("WARNING TEST", 1)'>WARN</a>
+    <a href="#" onclick='window.setMessage("INFO TEST", 0)'>INFO</a>
+    <!--Temporary for Message test END-->
+
 </div>
 
 <!--own code - interface not imported because of no need in javascript -->
