--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -43,6 +43,7 @@
 </div>
 
 <!--own code - interface not imported because of no need in javascript -->
+<script type="text/javascript" src="js/injects.js"></script>
 <script type="text/javascript" src="js/app-module.js"></script>
 <script type="text/javascript" src="js/app-routes.js"></script>
 
