--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="lib/angular-mocks.js"></script>
 
     <!--own code - interface not imported because of no need in javascript -->
+    <script type="text/javascript" src="../Server/public/js/injects.js"></script>
     <script type="text/javascript" src="../Server/public/js/app-module.js"></script>
     <script type="text/javascript" src="../Server/public/js/app-routes.js"></script>
 
