--- a/Server/public/js/directives/listRecipeRatings.tpl.html
+++ b/Server/public/js/directives/listRecipeRatings.tpl.html
@@ -1,5 +1,5 @@
 <div class="listRecipeRatings">
-    <h4>Bewertungen für: '{{recipe.title}}'</h4>
+    <h3>Alle Bewertungen für: '{{recipe.title}}'</h3>
 
     <small>ADD-Button if no own rating found:
         <fb-addedit-recipe-rating
