--- a/Server/public/js/directives/registerForm.tpl.html
+++ b/Server/public/js/directives/registerForm.tpl.html
@@ -1,4 +1,4 @@
-<div class="card-title teal-text ">Registrieren</div>
+<div class="card-title amber-text ">Registrieren</div>
 <div ng-hide="sessionCtrl.isLoggedIn()">
     <form id="registerForm" name="registerForm"
           class="userForm"
@@ -38,7 +38,7 @@
         <div class="card-action">
             <div class="row">
                 <div class="col s12">
-                    <button type="submit" class="btn teal darken-2 waves-effect right"
+                    <button type="submit" class="btn amber darken-2 white-text waves-effect right"
                             ng-disabled="registerForm.$invalid">Registrieren
                     </button>
                 </div>
