--- a/Server/public/js/directives/userDetails.tpl.html
+++ b/Server/public/js/directives/userDetails.tpl.html
@@ -1,11 +1,11 @@
 <div class="user-details">
     <div class="row">
-        <div class="col s4">
+        <div class="col l4">
             <h3>Mein Account</h3>
-            <p>hier könnten Bewertungen zu den Rezepten stehen</p>
+            <h4>Bewertungen zu deinen Rezepten</h4>
         </div>
-        <div class="col s8">
-            <h3>User Details</h3>
+        <div class="col m12 l8">
+            <h3>User Login Details</h3>
             <table>
                 <tr>
                     <td>User-ID:</td>
@@ -18,7 +18,7 @@
                         <input type="text"  value="{{user.name}}" />
                     </td>
                     <td>
-                        <button class="btn" >Name ändern</button>
+                        <button class="btn blue" >Name ändern</button>
                     </td>
                 </tr>
                 <tr>
@@ -27,7 +27,7 @@
                         <input  type="email" class="validate" value="{{user.email}}">
                     </td>
                     <td>
-                        <button class="btn" >Adresse ändern</button>
+                        <button class="btn blue">Adresse ändern</button>
                     </td>
                 </tr>
                 <tr>
@@ -36,10 +36,11 @@
                         <input type="password" class="validate" value="{{user.password}}" />
                     </td>
                     <td>
-                        <button class="btn">Passwort ändern</button>
+                        <button class="btn blue">Passwort ändern</button>
                     </td>
                 </tr>
             </table>
         </div>
+
     </div>
 </div>
