login & feedback  much nicer

--- a/Server/public/js/directives/addeditRecipeRating.tpl.html
+++ b/Server/public/js/directives/addeditRecipeRating.tpl.html
@@ -7,7 +7,7 @@
             <p>in Sternen</p>
             <p class="range-field">
                 <label>1 </label>
-                <input type="range" id="" min="1" max="5" style="max-width: 70%;" class="amber" />
+                <input type="range" id="" min="1" max="5" style="max-width: 70%;"  />
                 <label>5 </label>
             </p>
         </div>
