--- a/Server/public/js/directives/loginForm.tpl.html
+++ b/Server/public/js/directives/loginForm.tpl.html
@@ -25,20 +25,19 @@
                   <div>{{sessionCtrl.loginError.message}}</div>
               </div>
           </div>
-          <div class="card-action">
+          <div>
+              <!--login user-->
               <div class="row">
-                  <div class="col s6">
-                      <!--login user-->
-                      <button type="submit"
-                              ng-disabled="loginForm.$invalid"
-                              class="btn light-blue white-text waves-effect waves-light left">Login
-                      </button>
-                  </div>
-                  <div class="col s6">
-                      <!--login guest-->
-                      <a href="#/searchRecipe" class="btn white text-accent-1 blue-text waves-effect  right">Gast -Login</a>
-                  </div>
+                  <button type="submit"
+                          ng-disabled="loginForm.$invalid"
+                          class="btn light-blue white-text waves-effect waves-light right">Login
+                  </button>
               </div>
-
+              <hr />
+              <!--login guest-->
+              <div class="row">
+                  <div class="card-title blue-text">für Gäste</div>
+                  <a href="#/searchRecipe" class="btn white text-accent-1 blue-text waves-effect right">Gast -Login</a>
+              </div>
           </div>
     </form>
