--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -25,19 +25,18 @@
     <fb-menu></fb-menu>
     <fb-feedback-message></fb-feedback-message>
     <div class="ribbon"></div>
+
     <main class="supercontainer">
-        <div data-ng-view style="border: 0px dashed darkred;">
+        <div data-ng-view >
             <!-- will be filled by angular routing/templating -->
         </div>
     </main>
-
     <!--Temporary for Message test START-->
     Nur für Test der Meldungen:
     <a href="#" onclick='window.setMessage("ERROR TEST", 2)'>ERROR</a>
     <a href="#" onclick='window.setMessage("WARNING TEST", 1)'>WARN</a>
     <a href="#" onclick='window.setMessage("INFO TEST", 0)'>INFO</a>
     <!--Temporary for Message test END-->
-
 </div>
 
 <!--own code - interface not imported because of no need in javascript -->
