--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -6,6 +6,9 @@
 
     <title>Fetty Bossy-DB version 0.15</title>
 
+    <!--fancy favicon-->
+    <link rel="shortcut icon" href="pictures/fb_16.ico" />
+    <link rel="shortcut icon" href="pictures/fb_32.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="css/swiper.css"/>
     <link rel="stylesheet" href="css/materialize.css"/>
