--- a/Server/public/js/directives/searchResultlist.tpl.html
+++ b/Server/public/js/directives/searchResultlist.tpl.html
@@ -26,7 +26,7 @@
                     rating: -
                 </td>
                 <td >
-                   autor: -
+                    {{recipe.userName}}
                 </td>
             </tr>
         </tbody>
