- reverted own implementation of message-popup - added toastr

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/swiper.css"/>
     <link rel="stylesheet" href="css/materialize.css"/>
     <link rel="stylesheet" href="css/fb-styles.css"/>
+    <link rel="stylesheet" href="css/angular-toastr.css" />
 
     <!--libs-->
     <script type="text/javascript" src="js/lib/angular.js"></script>
@@ -22,11 +23,12 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/lib/materialize.js"></script>
     <script type="text/javascript" src="js/lib/swiper.js"></script>
+    <script type="text/javascript" src="js/lib/angular-toastr.js"></script>
+    <script type="text/javascript" src="js/lib/angular-toastr.tpls.js"></script>
 </head>
 <body>
 <div class="outer-wrapper">
     <fb-menu></fb-menu>
-    <fb-feedback-message></fb-feedback-message>
     <div class="ribbon"></div>
 
     <main class="supercontainer">
