additional ingredients added

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -57,6 +57,8 @@
 <script type="text/javascript" src="js/controllers/ViewRecipeController.js"></script>
 <script type="text/javascript" src="js/controllers/ViewUserController.js"></script>
 
+<script type="text/javascript" src="js/data/Ingredients.js"></script>
+
 <script type="text/javascript" src="js/directives/AddeditRecipeRatingDirective.js"></script>
 <script type="text/javascript" src="js/directives/FeedbackMessageDirective.js"></script>
 <script type="text/javascript" src="js/directives/FileChooserDirective.js"></script>
