added jquery instead of loading from the internet

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="js/lib/angular-animate.js"></script>
     <script type="text/javascript" src="js/lib/angular-route.js"></script>
     <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/lib/materialize.js"></script>
     <script type="text/javascript" src="js/lib/swiper.js"></script>
     <script type="text/javascript" src="js/lib/angular-toastr.tpls.js"></script>
